Fixing josh.js debug

--- a/index.html
+++ b/index.html
@@ -113,13 +113,13 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js"></script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.2/underscore-min.js"></script>
 <script type="text/javascript" src="http://physjs.com/js/phys.min.js"></script>
-<script type="text/javascript">Josh = {Debug: true };</script>
-<script type="text/javascript" src="http://cdn.rawgit.com/sdether/josh.js/master/js/history.js"></script>
-<script type="text/javascript" src="http://cdn.rawgit.com/sdether/josh.js/master/js/killring.js"></script>
-<script type="text/javascript" src="http://cdn.rawgit.com/sdether/josh.js/master/js/readline.js"></script>
-<script type="text/javascript" src="http://cdn.rawgit.com/sdether/josh.js/master/js/input.js"></script>
-<script type="text/javascript" src="http://cdn.rawgit.com/sdether/josh.js/master/js/shell.js"></script>
-<script type="text/javascript" src="http://cdn.rawgit.com/sdether/josh.js/master/js/pathhandler.js"></script>
+<script type="text/javascript">Josh = {Debug: false};</script>
+<script type="text/javascript" src="http://cdn.rawgit.com/AbhiAgarwal/josh.js/master/js/history.js"></script>
+<script type="text/javascript" src="http://cdn.rawgit.com/AbhiAgarwal/josh.js/master/js/killring.js"></script>
+<script type="text/javascript" src="http://cdn.rawgit.com/AbhiAgarwal/josh.js/master/js/readline.js"></script>
+<script type="text/javascript" src="http://cdn.rawgit.com/AbhiAgarwal/josh.js/master/js/input.js"></script>
+<script type="text/javascript" src="http://cdn.rawgit.com/AbhiAgarwal/josh.js/master/js/shell.js"></script>
+<script type="text/javascript" src="http://cdn.rawgit.com/AbhiAgarwal/josh.js/master/js/pathhandler.js"></script>
 <script>
   // States
   var activeState = "#researchandprojects";
