--- a/index.html
+++ b/index.html
@@ -227,27 +227,21 @@
     $(activeState).show();
   }
   function invisibleActiveState(newActiveState){
-    $(activeState).hide();
+    $(activeState).hide(); 
     activeState = newActiveState;
     $(activeState).show();
   }
   function currentStateConsider(currentState){
-    if($(currentState).is(':visible')){visibleActiveState();
-    } else {invisibleActiveState(currentState);}
+    if($(currentState).is(':visible')){visibleActiveState();}
+    else{invisibleActiveState(currentState);}
+  }
+  function clickReturn(clickData){
+    currentStateConsider(clickData);
   }
   // Loading Partials
-  $("#productivityClick").click(function() {
-    currentStateConsider("#canvas");
-  });
-
-  $("#physicsClick").click(function() {
-    currentStateConsider("#cmd1Div");
-  });
-
-  $("#morecontent").click(function() {
-    currentStateConsider("#more");
-  });
-
+  $("#productivityClick").click(clickReturn("#canvas"));
+  $("#physicsClick").click(clickReturn("#cmd1Div"));
+  $("#morecontent").click(clickReturn("#more"));
   // Google
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
