--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link href='favicon.ico' rel='shortcut icon' type='image/x-icon'>
 </head>
 <body>
-  <h1>abhi agarwal</h1>
+  <h1 id="activeState">abhi agarwal</h1>
   <div>
     <table width="100%" cellspacing="0" cellpadding="0">
       <tbody><tr>
@@ -236,12 +236,13 @@
     else{invisibleActiveState(currentState);}
   }
   function clickReturn(clickData){
-    currentStateConsider(clickData);
+    return function(){currentStateConsider(clickData);}
   }
   // Loading Partials
   $("#productivityClick").click(clickReturn("#canvas"));
   $("#physicsClick").click(clickReturn("#cmd1Div"));
   $("#morecontent").click(clickReturn("#more"));
+  $("#activeState").click(clickReturn("#researchandprojects"));
   // Google
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
