--- a/chronology.html
+++ b/chronology.html
@@ -42,13 +42,13 @@
             <h4>July</h4>
             <p>
               <ul>
-                <li>1st-31st: HackNY fellowship</li>
+                <li>1st-31st: HackNY fellowship at Buzzfeed</li>
               </ul>
             </p>
             <h4>June</h4>
             <p>
               <ul>
-                <li>1st-30th: HackNY fellowship</li>
+                <li>1st-30th: HackNY fellowship at Buzzfeed</li>
               </ul>
             </p>
             <h4>May</h4>
@@ -67,7 +67,7 @@
             <p>
               <ul>
                 <li>1st-12th: nyu semester, 13th to 24th: Bangkok, 25th-31st: nyu semester</li>
-                <li>Learning: julia</li>
+                <li>Learning: julia, go</li>
                 <li>Large projects: continue on a self-quantified platform, Ra, and begin working on porting phys.js to rust.</li>
                 <li>Small projects: re-build website, tech@nyu infrastructure</li>
               </ul>
@@ -86,6 +86,8 @@
               <ul>
                 <li>1st-26th: Bangkok (time-off programming), 27th-31st: nyu begins</li>
                 <li>Learning: go</li>
+                <li>Large projects: continue on a self-quantified platform.</li>
+                <li>Small projects: tech@nyu infrastructure</li>
               </ul>
             </p>
             <h3>2014</h3>
