--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
           <h2>other</h2>
           <p>
           <a id="productivityClick">productivity</a></br>
-          <a id="physicsClick">physics</a>
+          <a id="physicsClick">physics</a></br>
+          <a href="./tutorials/">tutorials</a>
           </p>
         </td>
         <td width="2%" valign="top"></td>
