--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <p>
           <a id="productivityClick">productivity</a></br>
           <a id="physicsClick">physics</a></br>
-          <a href="./tutorials/">tutorials</a>
+          <a href="./ramblings/">ramblings</a>
           </p>
         </td>
         <td width="2%" valign="top"></td>
