--- a/ramblings/index.html
+++ b/ramblings/index.html
@@ -14,7 +14,6 @@
   <link href='http://fonts.googleapis.com/css?family=Arvo:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="../style.css">
   <link href='../favicon.ico' rel='shortcut icon' type='image/x-icon'>
-  <link href="prism.css" rel="stylesheet" />
 </head>
 <body>
   <h1 id="activeState">abhi agarwal</h1>
@@ -22,25 +21,20 @@
     <table width="100%" cellspacing="0" cellpadding="0">
       <tbody><tr>
         <td width="100%" id="maincontent" valign="top">
-          <div id="tutorials">
-            <h2>linux shortcuts</h2>
-            <h3>iptables</h3>
+          <div id="ramblings">
+            <p>I love teaching and learning. Sometimes I write it down.</p>
+            <h2>ramblings</h2>
+            <h3><a href="./sshtunnel.html">sshtunnel</a></h3>
             <p>
-              Accepting a port: <pre><code class="language-bash">[sudo] iptables -A INPUT -i eth0 -p tcp --sport 3000 -j ACCEPT</code></pre>
+              How to use internet through a server you have laying around.
             </p>
+            <h3><a href="./linux-shortcuts.html">linux shortcuts</a></h3>
             <p>
-              Setting up port routing using (from port 80 to 8000): <pre><code class="language-bash">[sudo] iptables -t nat -A PREROUTING -p tcp --dport 80 -j REDIRECT --to-ports 8000</code></pre>
+              Shortcuts I usually use.
             </p>
+            <h3><a href="./code-optimizations.html">code optimizations</a></h3>
             <p>
-              Deleting existing rules: <pre><code class="language-bash">[sudo] iptables -F</code></pre>
-            </p>
-            <h3>get ip</h3>
-            <p>
-              <pre><code class="language-bash">dig +short myip.opendns.com @resolver1.opendns.com</code></pre>
-            </p>
-            <h3>speed test</h3>
-            <p>
-              Run this command and test the KB/s: <pre><code class="language-bash">wget --output-document=/dev/null http://speedtest.wdc01.softlayer.com/downloads/test500.zip</code></pre>
+              Code optimizations I have learnt during my course in compiler theory.
             </p>
           </div>
         </td>
@@ -50,7 +44,6 @@
   <div class="modal"></div>
 </body>
 <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
-<script src="prism.js"></script>
 <script>
   // Google
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
