--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             </p>
             <h3><a href="http://abhiagarwal.com/interactive-physics">phys.js - 2014</a></h3>
             <p>
-              <a href="https://github.com/AbhiAgarwal/phys.js">Phys</a> is a library created for individuals who want to use simple or advanced physics functions in their day-to-day work. Phys allows users to perform physics equations on the backend, and on the front-end. Phys has libraries for mechanics, thermal physics, quantum physics, and much more. Phys was built in Javascript.
+              <a href="https://github.com/AbhiAgarwal/phys.js">Phys</a> is a library created for individuals who want to use simple or advanced physics functions in their day-to-day work. Phys allows users to perform physics equations on the backend, and on the front-end. Phys has libraries for mechanics, thermal physics, quantum physics, and much more. Phys was built in Javascript. Links: <a href="http://nodeweekly.com/issues/20">node weekly</a>, <a href="http://weblogs.asp.net/dwahlin/the-web-weekly-edition-6">the web weekly</a>.
             </p>
             <h3><a href="http://abhiagarwal.com/knowledge-and-learning-platform-2014">dubsit - 2013-2014</a></h3>
             <p>
