--- a/ramblings/mylife.html
+++ b/ramblings/mylife.html
@@ -14,6 +14,7 @@
   <link href='http://fonts.googleapis.com/css?family=Arvo:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="../style.css">
   <link href='../favicon.ico' rel='shortcut icon' type='image/x-icon'>
+  <link href="prism.css" rel="stylesheet" />
 </head>
 <body>
   <h1 id="activeState">abhi agarwal</h1>
@@ -21,32 +22,16 @@
     <table width="100%" cellspacing="0" cellpadding="0">
       <tbody><tr>
         <td width="100%" id="maincontent" valign="top">
-          <div id="ramblings">
-            <p>I love teaching and learning. Sometimes I write it down. Some of my writings are very confusing, and very personal to me. These might not make sense to anyone else, but I use these writings to express my feelings.</p>
-            <h2>ramblings</h2>
-            <h3><a href="./software.html">software</a></h3>
+          <div id="tutorials">
+            <h2>my life</h2>
             <p>
-              Descriptions on some pieces of technology. Like a cheatsheet!
+              My life has been a picnic compared to lives of others. I've never been discriminated against. In any way. I was brought up in a safe environment at a safe high-school with an incredible family and supportive friends. I grew up in Bangkok.
             </p>
-            <h3><a href="./sshtunnel.html">sshtunnel</a></h3>
             <p>
-              How to use internet through a server you have laying around.
+              Growing up in the US is said to be so incredible outside the US, but as I've read more and more about issues that occur in the US it seems crazy and quite a shitshow if you're not the average white kid. 
             </p>
-            <h3><a href="./linux-shortcuts.html">linux shortcuts</a></h3>
             <p>
-              Shortcuts I usually use.
-            </p>
-            <h3><a href="./code-optimizations.html">code optimizations</a></h3>
-            <p>
-              Code optimizations I have learnt during my course in compiler theory.
-            </p>
-            <h3><a href="./God.html">my view on God</a></h3>
-            <p>
-              How I feel about God.
-            </p>
-            <h3><a href="./brain.html">brain</a></h3>
-            <p>
-              An outline into my study of the brain.
+              
             </p>
           </div>
         </td>
@@ -56,6 +41,7 @@
   <div class="modal"></div>
 </body>
 <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
+<script src="prism.js"></script>
 <script>
   // Google
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
