--- a/ramblings/break.html
+++ b/ramblings/break.html
@@ -14,6 +14,7 @@
   <link href='http://fonts.googleapis.com/css?family=Arvo:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="../style.css">
   <link href='../favicon.ico' rel='shortcut icon' type='image/x-icon'>
+  <link href="prism.css" rel="stylesheet" />
 </head>
 <body>
   <h1 id="activeState">abhi agarwal</h1>
@@ -21,32 +22,10 @@
     <table width="100%" cellspacing="0" cellpadding="0">
       <tbody><tr>
         <td width="100%" id="maincontent" valign="top">
-          <div id="ramblings">
-            <p>I love teaching and learning. Sometimes I write it down. Some of my writings are very confusing, and very personal to me. These might not make sense to anyone else, but I use these writings to express my feelings.</p>
-            <h2>ramblings</h2>
-            <h3><a href="./software.html">software</a></h3>
+          <div id="tutorials">
+            <h2>break</h2>
             <p>
-              Descriptions on some pieces of technology. Like a cheatsheet!
-            </p>
-            <h3><a href="./sshtunnel.html">sshtunnel</a></h3>
-            <p>
-              How to use internet through a server you have laying around.
-            </p>
-            <h3><a href="./linux-shortcuts.html">linux shortcuts</a></h3>
-            <p>
-              Shortcuts I usually use.
-            </p>
-            <h3><a href="./code-optimizations.html">code optimizations</a></h3>
-            <p>
-              Code optimizations I have learnt during my course in compiler theory.
-            </p>
-            <h3><a href="./God.html">my view on God</a></h3>
-            <p>
-              How I feel about God.
-            </p>
-            <h3><a href="./brain.html">brain</a></h3>
-            <p>
-              An outline into my study of the brain.
+              
             </p>
           </div>
         </td>
@@ -56,6 +35,7 @@
   <div class="modal"></div>
 </body>
 <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
+<script src="prism.js"></script>
 <script>
   // Google
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
