Updating my blog

--- a/ramblings/intimidation.html
+++ b/ramblings/intimidation.html
@@ -14,6 +14,12 @@
   <link href='http://fonts.googleapis.com/css?family=Arvo:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="../style.css">
   <link href='../favicon.ico' rel='shortcut icon' type='image/x-icon'>
+  <link href="prism.css" rel="stylesheet" />
+  <style type="text/css">
+    q, blockquote {
+      quotes: "\201C" "\201D" "\2018" "\2019";
+    }
+  </style>
 </head>
 <body>
   <h1 id="activeState">abhi agarwal</h1>
@@ -21,36 +27,16 @@
     <table width="100%" cellspacing="0" cellpadding="0">
       <tbody><tr>
         <td width="100%" id="maincontent" valign="top">
-          <div id="ramblings">
-            <p>I love teaching and learning. Sometimes I write it down. Some of my writings are very confusing, and very personal to me. These might not make sense to anyone else, but I use these writings to express my feelings.</p>
-            <h2>longer writings</h2>
-              <h3><a href="https://medium.com/history-of-computer-science/brief-history-of-the-computer-science-a13c6fbe5873">The very brief history of the Computer Science</a></h3>
-              <h3><a href="https://medium.com/ted-conference/how-tedactive-changed-me-4b948c036638">How TEDActive changed me</a></h3>
-            <h2>shorter writings on software</h2>
-            <h3><a href="./software.html">software</a></h3>
+          <div id="tutorials">
+            <h2>being intimidated</h2>
             <p>
-              Descriptions on some pieces of technology. Like a cheatsheet!
+              <q>There's not a fixed amount of success and recognition in the world. So another person's accomplishments don't diminish the accomplishments available to you.</q>
             </p>
-            <h3><a href="./sshtunnel.html">sshtunnel</a></h3>
             <p>
-              How to use internet through a server you have laying around.
+              Being intimidated of anyone is unnecessary. Why are worried about you being worse than anyone? You'll meet many people who are better than you, and a lot more people who are worse than you. You should never be scared off or intimidated by their skills. The fact is every single person you know, including yourself, can be successful. If your friend is much better than you doesn't mean that you both can't be successful. 
             </p>
-            <h3><a href="./linux-shortcuts.html">linux shortcuts</a></h3>
             <p>
-              Shortcuts I usually use.
-            </p>
-            <h3><a href="./code-optimizations.html">code optimizations</a></h3>
-            <p>
-              Code optimizations I have learnt during my course in compiler theory.
-            </p>
-            <h2>personal writing</h2>
-            <h3><a href="./God.html">my view on God</a></h3>
-            <p>
-              How I feel about God.
-            </p>
-            <h3><a href="intimidation.html" title="">being intimidated</a></h3>
-            <p>
-              My feelings about not being intimidated by anyone's accomplishments.
+              Success is hard to measure - or to define. It's subjective. It still doesn't mean that you accomplishments can't be just as big or just as important. Learn from other people's accomplishments and appreciate them. Don't be negative and be fearful of them - the world is full of opportunities and ways to be successful.
             </p>
           </div>
         </td>
@@ -60,6 +46,7 @@
   <div class="modal"></div>
 </body>
 <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
+<script src="prism.js"></script>
 <script>
   // Google
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
