--- a/ramblings/stay-college.html
+++ b/ramblings/stay-college.html
@@ -14,6 +14,12 @@
   <link href='http://fonts.googleapis.com/css?family=Arvo:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="../style.css">
   <link href='../favicon.ico' rel='shortcut icon' type='image/x-icon'>
+  <link href="prism.css" rel="stylesheet" />
+  <style type="text/css">
+    q, blockquote {
+      quotes: "\201C" "\201D" "\2018" "\2019";
+    }
+  </style>
 </head>
 <body>
   <h1 id="activeState">abhi agarwal</h1>
@@ -21,36 +27,19 @@
     <table width="100%" cellspacing="0" cellpadding="0">
       <tbody><tr>
         <td width="100%" id="maincontent" valign="top">
-          <div id="ramblings">
-            <p>I love teaching and learning. Sometimes I write it down. Some of my writings are very confusing, and very personal to me. These might not make sense to anyone else, but I use these writings to express my feelings.</p>
-            <h2>longer writings</h2>
-              <h3><a href="https://medium.com/history-of-computer-science/brief-history-of-the-computer-science-a13c6fbe5873">The very brief history of the Computer Science</a></h3>
-              <h3><a href="https://medium.com/ted-conference/how-tedactive-changed-me-4b948c036638">How TEDActive changed me</a></h3>
-            <h2>shorter writings on software</h2>
-            <h3><a href="./software.html">software</a></h3>
+          <div id="tutorials">
+            <h2>stay in college</h2>
             <p>
-              Descriptions on some pieces of technology. Like a cheatsheet!
+              tl;dr: Two years ago I passionately wanted to leave college. I'm glad I haven't. If what you're chasing is a high-pressure learning environment then don't leave. 
             </p>
-            <h3><a href="./sshtunnel.html">sshtunnel</a></h3>
             <p>
-              How to use internet through a server you have laying around.
+              I imagined leaving college to be very heroic. After leaving college you'd be able to learn things much faster, and actually do things you want. Actually sit down and work on tools and productions that actually change the world. But then I thought - life is long. I'm just 19. It's awesome to be excited and energetic, but I should give it a while and think about what I actually want from life before I quit. 
             </p>
-            <h3><a href="./linux-shortcuts.html">linux shortcuts</a></h3>
             <p>
-              Shortcuts I usually use.
+              Why do I want to leave so passionately? Why do I think I can learn things much faster outside college? It doesn't make sense. In college I have time to do things - I just choose to spend that time either procastinating or doing homework or going to classes. 
             </p>
-            <h3><a href="./code-optimizations.html">code optimizations</a></h3>
             <p>
-              Code optimizations I have learnt during my course in compiler theory.
-            </p>
-            <h2>personal writing</h2>
-            <h3><a href="./God.html">my view on God</a></h3>
-            <p>
-              How I feel about God.
-            </p>
-            <h3><a href="intimidation.html" title="">being intimidated</a></h3>
-            <p>
-              My feelings about not being intimidated by anyone's accomplishments.
+              You've to make sacrifices if you want to learn. But don't sacrafice college. The way I do most of my projects is that I spend a day a week finishing 2-3 weeks of material for each class. Then I'm able to skip the class for the next 2-3 weeks. There are shortcuts in which you're able to maximize both your college experience and your software-based learning. 
             </p>
           </div>
         </td>
@@ -60,6 +49,7 @@
   <div class="modal"></div>
 </body>
 <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
+<script src="prism.js"></script>
 <script>
   // Google
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
