--- a/ramblings/index.html
+++ b/ramblings/index.html
@@ -52,6 +52,10 @@
             <p>
               My feelings about not being intimidated by anyone's accomplishments.
             </p>
+            <h3><a href="side-projects.html" title="">side projects (in progress)</a></h3>
+            <p>
+              Why I think side-projects are important.
+            </p>
           </div>
         </td>
       </tr>
