Adding side projects

--- a/ramblings/side-projects.html
+++ b/ramblings/side-projects.html
@@ -9,17 +9,11 @@
   <meta content='http://abhi.co/' property='og:url'>
   <meta content='Abhi Agarwal' property='og:site_name'>
   <meta name="description" content="Abhi Agarwal portfolio">
-  <meta name="keywords" content="Abhi Agarwal, Abhi Mangal Agarwal, Abhi, Agarwal, NYU, Abhi NYU, Abhi Agarwal NYU, nyu, Agarwal Abhi">
-  <meta content='Projects, Interests, Knowledge, and Information' property='og:description'>
+  <meta name="keywords" content="Abhi Agarwal, Abhi Mangal Agarwal, Abhi, Agarwal, NYU, Abhi NYU, Abhi Agarwal NYU, nyu, Agarwal Abhi, side-projects, my views on side projects">
+  <meta content='Projects, Interests, Knowledge, and Information,' property='og:description'>
   <link href='http://fonts.googleapis.com/css?family=Arvo:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="../style.css">
   <link href='../favicon.ico' rel='shortcut icon' type='image/x-icon'>
-  <link href="prism.css" rel="stylesheet" />
-  <style type="text/css">
-    q, blockquote {
-      quotes: "\201C" "\201D" "\2018" "\2019";
-    }
-  </style>
 </head>
 <body>
   <h1 id="activeState">abhi agarwal</h1>
@@ -30,10 +24,10 @@
           <div id="tutorials">
             <h2>side-projects</h2>
             <p>
-              A person who doesn't do a lot of projects usually lacks the first-hand understanding of what is hard to do and what is not. That is harmful because he or she will have a hard time understanding time frames and how long it takes to build things. Or how possible things are using technology. This is usually, but not always, the case. The core and simplicity of ideas aren't always important. Sometimes the important thing is to understand how long each part of the process or cycle takes, and how complex each part is.
+              A person who doesn't do a lot of projects usually lacks the first-hand understanding of what is hard to do and what is not. That could be harmful because he or she will have a hard time understanding time frames and how long it takes to build things. Or how possible things are using technology. This is usually, but not always, the case. The core and simplicity of ideas aren't always important. Sometimes the important thing is to understand how long each part of the process or cycle takes, and how complex each part is.
             </p>
             <p>
-              Side projects don't always have to be technical side projects, but anything you work on the side besides your primary focus (usually school). 
+              Side projects don't always have to be technical side projects, but anything you work on the side besides your primary focus (usually school).
             </p>
           </div>
         </td>
