--- a/ramblings/index.html
+++ b/ramblings/index.html
@@ -26,6 +26,7 @@
             <h2>longer writings</h2>
               <h3><a href="https://medium.com/history-of-computer-science/brief-history-of-the-computer-science-a13c6fbe5873">The very brief history of the Computer Science</a></h3>
               <h3><a href="https://medium.com/ted-conference/how-tedactive-changed-me-4b948c036638">How TEDActive changed me</a></h3>
+              <h3><a href="https://blog.techatnyu.org/tech-nyu-s-internal-infrastructure-team-868c365cd496#.y52twxgm6">Tech@NYU’s internal Infrastructure team</a></h3>
             <h2>shorter writings on software</h2>
             <h3><a href="./software.html">software</a></h3>
             <p>
@@ -51,6 +52,10 @@
             <h3><a href="intimidation.html" title="">being intimidated</a></h3>
             <p>
               My feelings about not being intimidated by anyone's accomplishments.
+            </p>
+            <h3><a href="https://medium.com/discovery-experience/specialize-97957deb56a2" title="">thoughts on specialization</a></h3>
+            <p>
+              Should I spend time learning different languages or should I try and specialize in one? What does it mean for me to specialize, and should I do it.
             </p>
             <h3><a href="side-projects.html" title="">side projects (in progress)</a></h3>
             <p>
