moving to code.abhi.co

--- a/ramblings/index.html
+++ b/ramblings/index.html
@@ -32,15 +32,15 @@
             <p>
               Descriptions on some pieces of technology. Like a cheatsheet!
             </p>
-            <h3><a href="./sshtunnel.html">sshtunnel</a></h3>
+            <h3><a href="http://code.abhi.co/post/136873306173/ssh-tunnel">sshtunnel</a></h3>
             <p>
               How to use internet through a server you have laying around.
             </p>
-            <h3><a href="./linux-shortcuts.html">linux shortcuts</a></h3>
+            <h3><a href="http://code.abhi.co/post/136883968283/some-linux-shortcuts">linux shortcuts</a></h3>
             <p>
               Shortcuts I usually use.
             </p>
-            <h3><a href="./code-optimizations.html">code optimizations</a></h3>
+            <h3><a href="http://code.abhi.co/post/136884133573/small-code-optimizations">code optimizations</a></h3>
             <p>
               Code optimizations I have learnt during my course in compiler theory.
             </p>
