Fixing small issues

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
           <p>
             <a href="mailto:hi@abhi.co?Subject=Coffee!" target="_top">email</a><br>
             <a href="http://twitter.com/abhiagarwal">twitter</a><br>
+            <a href="http://code.abhi.co/">code writing</a><br>
             <a href="http://www.linkedin.com/in/abhimagarwal">linkedin</a><br>
             <a href="http://github.com/abhiagarwal">github</a><br>
             <a href="http://abhi.co/Agarwal.pdf">resume</a><br>
@@ -84,7 +85,7 @@
             <h2><a href="http://abhiagarwal.com/">projects</a></h2>
             <h3><a href="http://gif.gallery/">gif.gallery - 2015</a></h3>
             <p>
-              This project was my attempt at building a GIF search engine that could understanding natural language search. I used a variety of methods to tag and classify images images (such as object detection, scenery detection, etc), and used a couple APIs to validate and generate more tags. I built primarily in Python and C++, and this was built during HackWeek at BuzzFeed.
+              This project was my attempt at building a GIF search engine that could understanding natural language search. I used a variety of methods to tag and classify images (such as object detection, scenery detection, etc), and used a couple APIs to validate and generate more tags. I built primarily in Python and C++, and this was built during HackWeek at BuzzFeed.
             </p>
             <h3><a href="http://abhiagarwal.com/ra-2015">ra - 2015</a></h3>
             <p>
